[gd_scene load_steps=6 format=3 uid="uid://cyuw22c2xsn2j"]

[ext_resource type="Script" path="res://Old/ProjectilesEnemydown.gd" id="1_b0axl"]
[ext_resource type="Texture2D" uid="uid://cs5wt500f8svo" path="res://Old/Sprite_characters_objects_total_sprite_sheet.png" id="2_ox835"]
[ext_resource type="Script" path="res://Old/Damaging_pro.gd" id="3_1dd1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fwj5"]
size = Vector2(16, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idy4q"]
size = Vector2(18, 18)

[node name="ProjectilesEnemydown" type="CharacterBody2D"]
script = ExtResource("1_b0axl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ox835")
hframes = 7
vframes = 3
frame = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_1fwj5")

[node name="Timer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Damaging_pro" type="Area2D" parent="."]
script = ExtResource("3_1dd1v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damaging_pro"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_idy4q")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="body_entered" from="Damaging_pro" to="Damaging_pro" method="_on_body_entered"]
